# cookiecutter-modern-lightning-hydra-template

./: .cookiecutter.json  CHANGELOG.md  COOKIECUTTER_README.md  README.md  cookiecutter.json  environment.yaml  eval.py  format_cookiecutter_template.py  pyproject.toml  run.py  train.py
configs/data/: mnist.yaml
configs/model/: mnist.yaml
project/: __main__.py
project/utils/: __init__.py  instantiators.py  logging_utils.py  rich_utils.py  utils.py
{{cookiecutter.package_name}}/utils/: logging_utils.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  eval.py  pyproject.toml  train.py
{{cookiecutter.project_slug}}/configs/data/: mnist.yaml
{{cookiecutter.project_slug}}/tests/helpers/: run_if.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  __main__.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/data/: mnist_datamodule.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/utils/: __init__.py  instantiators.py  logging_utils.py  rich_utils.py  utils.py
