[project]
name = "cookiecutter-lightning-hydra"
version = "0.1.0"
description = "Cookiecutter template for a PyTorch Lightning project with Hydra"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yangyang Li", email = "yangyang.li@northwestern.edu" }]
keywords = [
  "cookiecutter",
  "template",
  "package",
  "pytorch",
  "lightning",
  "hydra",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development",
]
dependencies = [
  "cookiecutter>=2.6.0",
  "typer>=0.16.0",
  "alabaster>=1.0.0",
  "watchdog>=6.0.0",
]

[project.urls]
homepage = "https://github.com/cauliyang/cookiecutter-modern-lightning-hydra-template/tree/main"

[dependency-groups]
dev = [
  "coverage",          # testing
  "pytest",            # testing
  "pytest-cookies",    # testing
  "ruff",              # linting
  "ty",                # checking types
  "ipdb",
  "rust-just>=1.42.4",
]

[tool.ruff]
exclude = ["*cookiecutter.pypi_package_name*"]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # Pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
