[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
{% if cookiecutter.license != "None" -%}
license = "{{ cookiecutter.license }}"
{% endif -%}
authors = [
  { name = "{{ cookiecutter.project_author_name }}", email = "{{ cookiecutter.project_author_email }}" },
]
keywords = ["deep learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
  "datasets>=3.2.0",
  "evaluate>=0.4.3",
  "hydra-core>=1.3.2",
  "lightning>=2.4.0",
  "omegaconf>=2.3.0",
  "rich>=13.9.4",
  "torch>=2.5.1",
  "torchmetrics>=1.6.0",
  "typer>=0.15.1",
]

{% if cookiecutter.github_username != "YourGithubUsername" -%}
[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_repo_name }}"
Repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_repo_name }}"
{% endif %}

[project.scripts]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.__main__:app"

[project.optional-dependencies]

[tool.uv]
no-build-isolation-package = ['flash-attn', 'causal-conv1d']

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
log_cli = "True"
markers = ["slow: slow tests"]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
  "pragma: nocover",
  "raise NotImplementedError",
  "raise NotImplementedError()",
  "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
  "hydra-colorlog>=1.2.0",
  "hydra-optuna-sweeper>=1.2.0",
  "hydra-submitit-launcher>=1.2.0",
  "ipdb>=0.13.13",
  "ipykernel>=6.29.5",
  "jupyter>=1.1.1",
  "matplotlib>=3.9.3",
  "nvitop>=1.3.2",
  "pytest>=8.3.4",
  "pytest-sugar>=1.0.0",
  "ruff>=0.8.2",
  "seaborn>=0.13.2",
  "torchvision>=0.20.1",
  "wandb>=0.19.0",
]

ter.project_slug}} = "{{cookiecutter.project_slug}}.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true